--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
           </p>
         </div>
       </li>
+      <li>
+        <div>
+          <img src="imgs/IMG_3613.JPG" alt="風景画像" width="202" height="151">
+        </div>
+        <div>
+          <p>
+            工場地帯と青空<br>
+            どこか懐かしさを感じる。
+          </p>
+        </div>
+      </li>
     </ul>
   </section>
   <footer>
